<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.soundboard.MainActivity" >

    <Button
        android:id="@+id/Song_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="108dp"
        android:text="@string/Song_1" />

    <Button
        android:id="@+id/Song_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Song_1"
        android:layout_alignBottom="@+id/Song_1"
        android:layout_alignParentRight="true"
        android:layout_marginRight="46dp"
        android:text="@string/Song_2" />

    <Button
        android:id="@+id/Song_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/Song_1"
        android:layout_centerVertical="true"
        android:text="@string/Song_3" />

    <Button
        android:id="@+id/Song_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Song_3"
        android:layout_alignBottom="@+id/Song_3"
        android:layout_alignRight="@+id/Song_2"
        android:text="@string/Song_4" />

    <Button
        android:id="@+id/Song_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Song_3"
        android:layout_below="@+id/Song_3"
        android:layout_marginTop="34dp"
        android:text="@string/Song_5" />

    <Button
        android:id="@+id/Song_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/Song_4"
        android:layout_alignTop="@+id/Song_5"
        android:text="@string/Song_6" />

</RelativeLayout>
